# MATRIX-REORDER

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  desc.txt  desc1.txt  smaple.txt  test_exact_sample_sparse_merbit.txt  test_rmat_csr.txt  test_rmat_meribit.txt  text_exact_sample_merbit.txt  train_exact_sample.txt
config/: config.txt  config1.txt  config2.txt  config3.txt
include/: ThreadPool.h  class.cuh  fun.cuh  inc.cuh  integer_heap.cuh  merbit.cuh  model.cuh  timer.cuh  utils.cuh
parsb/: CMakeLists.txt  CMakePresets.json
parsb/include/: SlashBurn.h  benchmark.h  bitmap.h  builder.h  command_line.h  graph.h  pvector.h  reader.h  util.h  writer.h
parsb/src/: SlashBurn.cpp  main.cpp
rabbitorder/: CMakeLists.txt
rabbitorder/include/: rabbit_order.h  utils.h
rabbitorder/src/: main.cpp  rabbit_order.cpp
rcm/: .gitignore  CMakeLists.txt  CMakePresets.json
rcm/include/: globaldefines.h  mmio.h  queue.h  rcm.h
rcm/src/: main.cpp  mmio.cpp  queue.cpp  rcm.cpp
ridge/: train.py
src/: class.cu  main.cu  test.cu
